style clip on mobile fixed

--- a/_sass/noroof/_layout.scss
+++ b/_sass/noroof/_layout.scss
@@ -103,8 +103,8 @@ nav {
 
 section {
   padding: 7rem 8rem 6rem 8rem;
-  margin-top: -5rem;
-  clip-path: polygon(0 5rem, 100% 0, 100% 100%, 0% 100%);
+  margin-top: -6vw;
+  clip-path: polygon(0 6vw, 100% 0, 100% 100%, 0% 100%);
 
   h2 {
     text-align: center;
